# euro-camp

./: .dockerignore  .env  .gitignore  Dockerfile  WARP.md  campsites_import.csv  campsites_import.numbers  docker-compose.yml  docker-setup.sh  fix_db_permissions.sql  main.py  pyproject.toml  sample_campsites.csv  test.md
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
api/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
core/: admin.py  forms.py  models.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_campsite_created_by.py  0003_campsite_image_url.py  0004_campsite_is_approved_campsite_suggested_by.py  0005_approve_existing_campsites.py  0006_convert_country_to_codes.py  0007_alter_campsite_country.py  0008_campsite_is_premium.py  0009_campsitelike.py  0010_campsite_town.py  0011_product.py  0012_campsite_province_campsite_type.py
static/css/: output.css
static/js/: campsite-map.js  campsite-pagination.js  campsite-search.js  campsites-map.js  country-filter.js  likes.js
templates/: base.html  home.html
templates/accounts/: login.html  register.html
templates/admin/core/campsite/: change_list.html  import_csv.html
templates/campsites/: admin_manage.html  create.html  delete.html  detail.html  edit.html  list.html  map.html  my_suggestions.html  pending.html  suggest.html
templates/products/: create.html  delete.html  detail.html  edit.html  list.html
